# playground

./: .gitignore  .gitmodules  LICENSE  README.txt
KeiOS/: clean.sh  env.sh  iso.sh  qemu.sh
KeiOS/kernel/: Makefile
MOS/: shell.c
RoR/: 1.rkt  2.rkt  4_5.rkt
boop/: .gitignore  CMakeLists.txt  build.sh  clean.sh  test.sh
boop/samples/: twamp-light.pcapng
boop/src/: CMakeLists.txt  boopr.cpp  connect.cpp  connect.h  main.cpp
boop/tests/: CMakeLists.txt  test_connect.cpp
challenges/30_days_of_code/: day_22-binary_search_trees.cpp
challenges/cpp/inheritance/: magic_spells.cpp
challenges/cpp/other/: bit_array.cpp
challenges/fb/: cafeteria.cpp  kaitenzushi.cpp  rotary_lock_1.cpp
challenges/hr/30_days_of_code/: day_23-bst_level_order_traversal.cpp  day_24-more_linked_lists.cpp  day_25-running_time_and_complexity.cpp  day_26-nested_logic.cpp  day_27-testing.cpp  day_28-regex_patterns_and_intro_to_databses.cpp  day_29-bitwise_and.cpp
challenges/lc/arrays/: assign_cookies.cpp  (+19 more)
cpp20-modules/: Containerfile
cpp20-modules/example01/: CMakeLists.txt  Example.cppm  MyProgram.cpp  main.cpp
cpp20-modules/example02/: CMakeLists.txt  Impl.cpp  M.cppm  User.cpp  impl_part.cppm  interface_part.cppm
ctf/: README.txt  USB_pcap.txt  format_string.txt  wordlist_to_base64.py
f302_template/: Makefile
f302_template/src/: main.c  stm32f3xx_hal_conf.h
linker-voodoo/: Makefile
linker-voodoo/src/: foolib.c
lomu_hello-world/: .cproject  .mxproject  .project  STM32L562CETX_FLASH.ld  lomu_hello-world.ioc
qr2qr/: qr2qr.py
scrape-o-mat/: .gitignore  config_dummy.py  scrape-o-mat.py
wasm/add/: add.c  add.html  build.sh
yaho/: README.txt  env.sh
yaho/src/: boot.asm  boot.s  grub.cfg  kernel.c  kernel_tcc.c  linker.ld
(+119 files in other folders)
